// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`DefaultMemory should remember memories for AIAgent correctly 1`] = `
[
  {
    "content": [
      {
        "text": 
"You are a helpful assistant.
Please answer in zh."
,
        "type": "text",
      },
    ],
    "role": "system",
  },
  {
    "content": [
      {
        "text": "I like blue color",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`DefaultMemory should remember memories for AIAgent correctly 2`] = `
[
  {
    "content": [
      {
        "text": 
"You are a helpful assistant.
Please answer in zh."
,
        "type": "text",
      },
      {
        "text": "I like blue color",
        "type": "text",
      },
      {
        "text": "Great, the blue color is nice!",
        "type": "text",
      },
    ],
    "role": "system",
  },
  {
    "content": [
      {
        "text": "I also like red color",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`DefaultMemory should remember memories for AIAgent correctly 3`] = `
[
  {
    "content": {
      "input": {
        "message": "I also like red color",
      },
      "output": {
        "message": "Red is also a nice color!",
      },
      "source": "TestAgent",
    },
    "createdAt": Any<String>,
    "id": Any<String>,
    "sessionId": null,
  },
  {
    "content": {
      "input": {
        "message": "I like blue color",
      },
      "output": {
        "message": "Great, the blue color is nice!",
      },
      "source": "TestAgent",
    },
    "createdAt": Any<String>,
    "id": Any<String>,
    "sessionId": null,
  },
]
`;
